respect des contraintes énumérations dans l'affichage des entités enfant du viewer
